--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,9 @@
-<% provide(:title, "Home") %>
+<div class="center jumbotron">
+  <h1>Sodbury Challenge</h1>
 
-<h1>Sample App</h1>
-<p>This is the home page for the app.</p>
+  <h2>
+    This is the home page for the app
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
