--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,19 @@
         <li><%= link_to "Home",    root_path   %></li>
         <li><%= link_to "About",   about_path  %></li>
         <li><%= link_to "Help",    help_path   %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Master Checkpoint List</a></li>
+            <li><a href="#">Routes</a></li>
+            <li><a href="#">Teams</a></li>
+            <li role="separator" class="divider"></li>
+            <li class="dropdown-header">Profile</li>
+            <li><a href="#">Edit Profile</a></li>
+            <li><a href="#">Logout</a></li>
+          </ul>
+        </li>
+
         <li><%= link_to "Log in", '#' %></li>
       </ul>
     </nav>
