Added automated year tags

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    Sodbury Challenge
+    Sodbury Challenge <%= Date.current.year %>
   </small>
   <nav>
     <ul>
