--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center jumbotron">
-  <h1>Sodbury Challenge</h1>
+  <h1>Sodbury Challenge <%= Date.current.year %></h1>
 
   <h2>
     This is the home page for the app
