--- a/app/views/checkpoints/index.html.erb
+++ b/app/views/checkpoints/index.html.erb
@@ -1,6 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Master Checkpoint List</h1>
+<% provide(:title, "Master Checkpoint List") %>
 
 <div class="row">
   <div class="col-md-2">
