--- a/app/views/checkpoints/index.html.erb
+++ b/app/views/checkpoints/index.html.erb
@@ -5,7 +5,7 @@
     <%= link_to raw("<span class=\"glyphicon glyphicon-plus\"></span> New Checkpoint"), new_checkpoint_path, :class=>'btn btn-success' %>
   </div>
   <div class="col-md-2">
-    <%= link_to raw("<span class=\"glyphicon glyphicon-floppy-disk\"></span> Save as PDF"), checkpoints_path(:format => "pdf"), :class=>'btn btn-danger' %>
+    <%= link_to raw("<span class=\"glyphicon glyphicon-floppy-disk\"></span> Save as PDF"), checkpoints_path(@checkpoint, :format => "pdf"), :class=>'btn btn-danger' %>
   </div>
 </div>
 <br>
