--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "SODBURY CHALLENGE", root_path, id: "logo" %>
+          <%= link_to "SODBURY CHALLENGE #{Date.current.year}", root_path, id: "logo" %>
         </div>
         <div id="navbar" class="navbar-collapse collapse navbar-right">
           <ul class="nav navbar-nav">
@@ -34,6 +34,7 @@
             <% else %>
               <li><%= link_to "Log in", login_path %></li>
             <% end %>
+            <li><a class="white">Official Time: <%= Time.now.strftime("%H:%M") %></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
