--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,7 +12,7 @@
       <th>Team Number</th>
       <th>Name</th>
       <th>Start Time</th>
-      <th>Due Finish Time</th>
+      <th>Expected Finish Time</th>
       <th colspan="3"></th>
     </tr>
   </thead>
