--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,10 +68,10 @@ h2 {
 }
 
 p {
-  font-size: 1.1em;
+  font-size: 1.2em;
   line-height: 1.7em;
 }
-
+ol li{padding-bottom:10px;font-size:1.2em}
 /* header */
 
 #logo {
