--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,7 @@
           <ul class="nav navbar-nav">
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "About", about_path %></li>
+            <li><%= link_to "Rules", rules_path %></li>
 
             <% if logged_in? %>
               <li><%= link_to "Users", users_path %></li>
