Replace troublesome chars

--- a/app/views/static_pages/rules.html.erb
+++ b/app/views/static_pages/rules.html.erb
@@ -9,11 +9,11 @@
 
   <li>Entrants/teams shall be equipped properly and dressed to suit the weather. Wellington boots and trainers are not suitable and if wet a waterproof coat and leggings must be worn. All entrants will be inspected prior to starting the course. Those not suitably equipped will not be able to start. The following items are not permitted: - Mp3 Players or any other music player, GPS navigation devices and any mobile phone apart from the one permitted in rule 4.</li>
 
-  <li>Only one mobile phone per team is permitted on the course, and this must remain in a bag for the duration of the exercise. They are for emergencies only and calling in at half-time only. If they are seen to be used outside of these times the team will be disqualified. (Orange & Vodafone good signal in the area)</li>
+  <li>Only one mobile phone per team is permitted on the course, and this must remain in a bag for the duration of the exercise. They are for emergencies only and calling in at half-time only. If they are seen to be used outside of these times the team will be disqualified. (Orange &amp; Vodafone good signal in the area)</li>
 
   <li>Entrants/Teams must observe the Highway Code when on roads and country code when travelling off road. They must also keep noise to a minimum and leave no litter along the course.</li>
 
-  <li>Halfway through the exercise, teams must phone ‘Control’ to report their position. Bonus points are allotted to those that meet the target time. Teams failing to phone will be disqualified.</li>
+  <li>Halfway through the exercise, teams must phone &lsquo;Control&rsquo; to report their position. Bonus points are allotted to those that meet the target time. Teams failing to phone will be disqualified.</li>
 
   <li>All compulsory checkpoints must be visited.</li>
 
