--- a/app/assets/stylesheets/checkpoints.scss
+++ b/app/assets/stylesheets/checkpoints.scss
@@ -1,3 +1,3 @@
 // Place all the styles related to the Checkpoints controller here.
-// They will automatically be included in application.css.
+// They will need to be imported into application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
