--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,15 +27,13 @@
                   <li><%= link_to "Profile", current_user %></li>
                   <li><%= link_to "Settings", edit_user_path(current_user) %></li>
                   <li class="divider"></li>
-                  <li>
-                    <%= link_to "Log out", logout_path, method: "delete" %>
-                  </li>
+                  <li><%= link_to "Log out", logout_path, method: "delete" %></li>
                 </ul>
               </li>
             <% else %>
               <li><%= link_to "Log in", login_path %></li>
             <% end %>
-            <li><a class="white">Official Time: <%= Time.now.strftime("%H:%M") %></a></li>
+            <li><a id="official-time">Official Time:<span id="clock"></span></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
