Simplify users view

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,22 @@
-<% provide(:title, 'All users') %>
+<% provide(:title, 'Manage App Users') %>
+
+<p>App users can manage the list of checkpoints, routes and teams. They can
+also submit scores and add and remove other users.</p>
 
 <%= will_paginate %>
 
-<ul class="users">
-  <%= render @users %>
-</ul>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>User</th>
+      <th>Email Address</th>
+      <th>Account Created</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <%= render @users %>
+  </tbody>
+</table>
 
 <%= will_paginate %>
