--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,13 @@
-<li>
-  <%= gravatar_for user, size: 50 %>
-  <%= link_to user.name, user %>
-  <% if current_user.admin? && !current_user?(user) %>
-    | <%= link_to "delete", user, method: :delete,
-                                  data: { confirm: "You sure?" } %>
-  <% end %>
-</li>
+<tr>
+  <td><%= user.name %></td>
+  <td><%= user.email %></td>
+  <td><%= user.created_at.strftime("%-d %B %Y") %></td>
+  <td>
+    <% if current_user?(user) %>
+      <%= link_to "Manage", edit_user_path(user) %>
+    <% else %>
+      <%= link_to "Remove", user, method: :delete,
+                                  data: { confirm: "Remove #{user.name}? This cannot be undone." } %>
+    <% end %>
+  </td>
+</tr>
