--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,36 @@
-<% provide(:title, 'Sign up') %>
+<% provide(:title, 'Create a New User') %>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
+    <p>App users can manage the list of checkpoints, routes and teams.
+       They can also submit scores and add and remove other users.</p>
+  </div>
+</div>
+
+<%= form_for(@user) do |f| %>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
       <%= render 'shared/error_messages', object: f.object %>
 
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
 
-      <%= f.label :email %>
+      <%= f.label :email, "Email Address" %>
       <%= f.email_field :email, class: 'form-control' %>
 
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "Confirm Password" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
-
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <% end %>
+    </div>
   </div>
-</div>
+  <div class="row vspace">
+    <div class="col-md-3 col-md-offset-3">
+      <%= link_to "Back", users_path, class: "btn btn-group-justified btn-default" %>
+    </div>
+    <div class="col-md-3">
+      <%= f.submit "Add User", class: "btn btn-primary" %>
+    </div>
+  </div>
+<% end %>
