Add vertical spacing

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -190,6 +190,9 @@ input {
     font-weight: normal;
   }
 }
+.vspace {
+  margin-top: 18px;
+}
 #session_remember_me {
   width: auto;
   margin-left: 0;
