--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,17 @@
     <%= render 'layouts/header' %>
     <div class="container">
       <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <div class="row vspace">
+          <div class="col-md-12">
+            <div class="alert alert-<%= message_type %>"><%= message %></div>
+          </div>
+        </div>
       <% end %>
-      <h1><%= yield(:title) %></h1>
+      <div class="row">
+        <div class="col-md-12">
+          <h1><%= yield(:title) %></h1>
+        </div>
+      </div>
       <%= yield %>
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
