Remove unused styles

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,9 +1,3 @@
-.users ul {
-  list-style: none;
-  margin: 0;
-  li {
-    overflow: auto;
-    padding: 10px 0;
-    border-bottom: 1px solid $gray-lighter;
-  }
-}
+// Place all the styles related to the Teams controller here.
+// They will need to be imported into application.css.scss.
+// You can use Sass (SCSS) here: http://sass-lang.com/
