--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,9 +1,38 @@
-<% provide(:title, "About") %>
+<% provide(:title, "About the Challenge") %>
 
-<p>The Sodbury Challenge is an overnight orienteering exercise held in the Sodbury/Wickwar/Rangeworthy area of South Gloucestershire. The event is open to all Scouts and Explorers within the County aged between 10 and 18.</p>
-<p>The Challenge consists of a 5 and an 8 hour exercise with scouts and explorers able to enter teams for either duration with the winning team in each section being the team gaining the most points on the night.</p>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <p>The Sodbury Challenge is an overnight orienteering exercise held in the
+    Sodbury/Wickwar/Rangeworthy area of South Gloucestershire. The event is open to all
+    Scouts and Explorers within the County aged between 10 and 18.</p>
 
-<p><b>5 HOUR</b> - A five hour night exercise for teams of 3 - 5 members  First team out at 6.00pm and then the rest at 10 minute intervals.</p>
-<p><b>8 HOUR</b> - An eight hour exercise for teams of 3 - 5 members. First team out at 10:00pm and then the rest at 15 minute intervals.</p>
+    <p>The Challenge consists of a 5 and an 8 hour exercise with Scouts and Explorers
+    able to enter teams for either duration and the winning team in each section being
+    the team gaining the most points on the night.</p>
 
-<p>N.B. Scouts and explorers compete separately with scouts and explorer trophies for both the 5 and 8 hour exercises. New this year explorers can enter the five hour competition or the eight hour one.</p>
+    <p><strong>5 HOUR</strong> &ndash; A five hour exercise for teams of 3&ndash;5
+    members. First team out at 6pm and then the rest at 10 minute intervals.</p>
+
+    <p><strong>8 HOUR</strong> &ndash; An eight hour exercise for teams of 3&ndash;5
+    members. First team out at 10pm and then the rest at 15 minute intervals.</p>
+
+    <p>This year Explorers can enter the five hour competition or the eight hour one.
+    Scouts and Explorers compete separately, with Scouts and Explorer trophies for both
+    the 5 and 8 hour exercises.</p>
+  </div>
+</div>
+
+<div class="row vspace">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h4 class="panel-title">Note</h4>
+      </div>
+      <div class="panel-body">
+        This year Explorers can enter the five hour competition or the eight hour one.
+        Scouts and Explorers compete separately, with Scouts and Explorer trophies for
+        both the 5 and 8 hour exercises.
+      </div>
+    </div>
+  </div>
+</div>
