--- a/app/views/static_pages/rules.html.erb
+++ b/app/views/static_pages/rules.html.erb
@@ -1,33 +1,72 @@
-<% provide(:title, "Rules") %>
+<% provide(:title, "Challenge Rules") %>
 
-<p><b>LEADERS: Please read these rules and ensure that your teams understand them. THANK YOU.</b></p>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h4 class="panel-title">Leaders:</h4>
+      </div>
+      <div class="panel-body">
+        <h4>Please read these rules and ensure that your teams understand them.</h4>
+      </div>
+    </div>
+  </div>
+</div>
 
-<ol>
-  <li>All entry forms and fees must be in by the end of Saturday 3rd October 2015.</li>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <ol>
+      <li>All entry forms and fees must be in by the end of Saturday 3 October 2015.</li>
 
-  <li>Entrants/teams must be able to read a map and understand eight figure grid references. (E.g. 1235,1230 (Fourth digit will be a 0 or a 5))</li>
+      <li>Entrants/teams must be able to read a map and understand eight-figure grid
+      references, e.g. 1235,1230 (the fourth digit will be a 0 or a 5).</li>
 
-  <li>Entrants/teams shall be equipped properly and dressed to suit the weather. Wellington boots and trainers are not suitable and if wet a waterproof coat and leggings must be worn. All entrants will be inspected prior to starting the course. Those not suitably equipped will not be able to start. The following items are not permitted: - Mp3 Players or any other music player, GPS navigation devices and any mobile phone apart from the one permitted in rule 4.</li>
+      <li>Entrants/teams must be equipped properly and dressed to suit the weather.
+      Wellington boots and trainers are not suitable. If wet, a waterproof coat and
+      leggings must be worn. All entrants will be inspected prior to starting the course;
+      those not suitably equipped will not be able to start. The following items are not
+      permitted: MP3 players, or any other music player; GPS navigation devices; and any
+      mobile phone apart from the one permitted in rule 4.</li>
 
-  <li>Only one mobile phone per team is permitted on the course, and this must remain in a bag for the duration of the exercise. They are for emergencies only and calling in at half-time only. If they are seen to be used outside of these times the team will be disqualified. (Orange &amp; Vodafone good signal in the area)</li>
+      <li>Only one mobile phone per team is permitted on the course, and this must remain
+      in a bag for the duration of the exercise. They are for emergencies and calling in
+      at half-time only; if they are seen to be used outside of these times the team will
+      be disqualified. Orange and Vodafone have good signal in the area.</li>
 
-  <li>Entrants/Teams must observe the Highway Code when on roads and country code when travelling off road. They must also keep noise to a minimum and leave no litter along the course.</li>
+      <li>Entrants/teams must observe the Highway Code when on roads and the Country Code
+      when travelling off road. They must also keep noise to a minimum and leave no
+      litter along the course.</li>
 
-  <li>Halfway through the exercise, teams must phone &lsquo;Control&rsquo; to report their position. Bonus points are allotted to those that meet the target time. Teams failing to phone will be disqualified.</li>
+      <li>Halfway through the exercise, teams must phone &lsquo;Control&rsquo; to report
+      their position. Bonus points are allotted to those that meet the target time. Teams
+      failing to phone will be disqualified.</li>
 
-  <li>All compulsory checkpoints must be visited.</li>
+      <li>All compulsory checkpoints must be visited.</li>
 
-  <li>Teams entered in the 5 hour exercise must travel by road and not travel cross country.</li>
+      <li>Teams entered in the 5 hour exercise must travel by road and not travel cross
+      country.</li>
 
-  <li>No team shall join up with another team. Those teams found with other teams will be disqualified and removed from the course.</li>
+      <li>No team shall join up with another team. Those teams found with other teams
+      will be disqualified and removed from the course.</li>
 
-  <li>No leaders or parents are permitted on the course. Any unauthorised leader or parent seen on the course, or talking to their teams, after checking in shall be construed as helping the team. The team shall be disqualified. Those wishing to view the course may request to accompany a marshal.</li>
+      <li>No leaders or parents are permitted on the course. Any unauthorised leader or
+      parent seen on the course &ndash; or talking to their teams &ndash; after checking
+      in shall be construed as helping the team. The team will be disqualified. Those
+      wishing to view the course may request to accompany a marshal.</li>
 
-  <li>There is a time limit for completion of the course. Teams should return to the finish point by the time stated on their checkpoint form. One point will be deducted for every minute late up to a maximum of 30 upon where the team will be disqualified.</li>
+      <li>There is a time limit for completion of the course. Teams should return to the
+      finish point by the time stated on their checkpoint form. One point will be
+      deducted for every minute late up to a maximum of 30 points, whereupon the team
+      will be disqualified.</li>
 
-  <li>The H.Q. office shall be out of bounds at all times to anyone except marshals.</li>
+      <li>The H.Q. office shall be out of bounds at all times to anyone except marshals.</li>
 
-  <li>NO TEAM shall leave the course without first informing marshals on the course, or telephoning the control room. All entrants must let the person checking them in know that they are leaving after the event.</li>
+      <li>NO TEAM shall leave the course without first informing marshals on the course,
+      or telephoning the control room. All entrants must let the person checking them in
+      know that they are leaving after the event.</li>
 
-  <li>The organisers reserve the right to remove teams from the course for any reason. The decision of the organisers shall be final.</li>
-</ol>
+      <li>The organisers reserve the right to remove teams from the course for any
+      reason. The decision of the organisers shall be final.</li>
+    </ol>
+  </div>
+</div>
