--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -24,12 +24,12 @@
       <%= f.password_field :password_confirmation, class: 'form-control' %>
     </div>
   </div>
-  <div class="row vspace">
-    <div class="col-md-3 col-md-offset-3">
-      <%= link_to "Back", users_path, class: "btn btn-group-justified btn-default" %>
-    </div>
-    <div class="col-md-3">
+  <div class="row">
+    <div class="col-md-3 col-md-offset-3 vspace">
       <%= f.submit "Save Changes", class: "btn btn-primary" %>
+    </div>
+    <div class="col-md-3 vspace">
+      <%= link_to "Cancel", users_path, class: "btn btn-block btn-default" %>
     </div>
   </div>
 <% end %>
