--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,7 +26,7 @@
 </div>
 
 <div class="row">
-  <div class="col-md-12">
-    <%= link_to raw("<span class=\"glyphicon glyphicon-plus\"></span> New User"), new_user_path, :class=>'btn btn-success' %>
+  <div class="col-md-2">
+    <%= link_to raw("<span class=\"glyphicon glyphicon-plus\"></span> New User"), new_user_path, :class=>'btn btn-block btn-success' %>
   </div>
 </div>
