--- a/app/views/checkpoints/new.html.erb
+++ b/app/views/checkpoints/new.html.erb
@@ -1,5 +1,32 @@
 <% provide(:title, "New Checkpoint") %>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <p>Use this form to create a new checkpoint and save it to the database.</p>
+  </div>
+</div>
 
-<%= link_to 'Back', checkpoints_path %>
+<%= form_for(@checkpoint) do |f| %>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <%= render 'shared/error_messages', object: f.object %>
+
+      <%= f.label :number, "Checkpoint Number" %>
+      <%= f.text_field :number, class: 'form-control' %>
+
+      <%= f.label :grid_reference, "Grid Reference" %>
+      <%= f.text_field :grid_reference, class: 'form-control', placeholder: 'e.g. 2345-7890' %>
+
+      <%= f.label :description, "Description" %>
+      <%= f.text_area :description, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-3 vspace">
+      <%= f.submit :class=>'btn btn-primary' %>
+    </div>
+    <div class="col-md-3 vspace">
+      <%= link_to "Cancel", checkpoints_path, :class=>'btn btn-block btn-default' %>
+    </div>
+  </div>
+<% end %>
