--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "SODBURY CHALLENGE #{Date.current.year}", root_path, id: "logo" %>
+          <%= link_to "SODBURY CHALLENGE #{Date.current.year}", root_path, class: "navbar-brand" %>
         </div>
         <div id="navbar" class="navbar-collapse collapse navbar-right">
           <ul class="nav navbar-nav">
