--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= user.name %></td>
   <td><%= user.email %></td>
-  <td><%= user.created_at.strftime("%-d %B %Y") %></td>
+  <td><%= time_ago_in_words(user.created_at).humanize %> ago</td>
   <td>
     <% if current_user?(user) %>
       <%= link_to "Manage", edit_user_path(user) %>
