Rename routes -> challenges

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,8 @@
 
 <div class="row">
   <div class="col-md-12">
-    <p>App users can manage the list of checkpoints, routes and teams. They can
-    also submit scores and add and remove other users.</p>
+    <p>App users can manage the list of checkpoints, challenges and teams.
+    They can also submit scores and add and remove other users.</p>
   </div>
 </div>
 
