--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <p>App users can manage the list of checkpoints, routes and teams.
+    <p>App users can manage the list of checkpoints, challenges and teams.
        They can also submit scores and add and remove other users.</p>
   </div>
 </div>
