--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,7 @@
                   Manage <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
+                  <li><%= link_to "Teams", teams_path %></li>
                   <li><%= link_to "Checkpoints", checkpoints_path %></li>
                   <li><%= link_to "App Users", users_path %></li>
                   <li><%= link_to "My Account", edit_user_path(current_user) %></li>
