--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,45 +1,45 @@
-<% provide(:title, "Teams List") %>
+<% provide(:title, "Manage Teams") %>
 
 <div class="row">
-  <div class="col-md-2">
-    <%= link_to raw("<span class=\"glyphicon glyphicon-plus\"></span> New Team"), new_team_path, :class=>'btn btn-success' %>
+  <div class="col-md-12">
+    <p>This page lets you manage the teams taking part in this year's Sodbury Challenge.</p>
   </div>
 </div>
-<br>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Year</th>
-      <th>Team No.</th>
-      <th>Name</th>
-      <th>Route</th>
-      <th>Score</th>
-      <th>Start Time</th>
-      <th>Due End Time</th>
-      <th>End Time</th>
-      <th>Due Phone in Time</th>
-      <th>Phone in Time</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @teams.each do |team| %>
-      <tr>
-        <td><%= team.team_year %></td>
-        <td><%= team.team_number %></td>
-        <td><%= team.name %></td>
-        <td><%= team.route_id %></td>
-        <td><%= team.score %></td>
-        <td><%= team.start_time %></td>
-        <td><%= team.due_end_time %></td>
-        <td><%= team.end_time %></td>
-        <td><%= team.due_phone_in_time %></td>
-        <td><%= team.phone_in_time %></td>
-        <!--<td><%= link_to 'Show', team %></td>-->
-        <td><%= link_to 'Edit', edit_team_path(team) %></td>
-        <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="row">
+  <div class="col-md-12">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Number</th>
+          <th>Name</th>
+          <th>Group</th>
+          <th>Start Time</th>
+          <th>Score</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+          <% @teams.each do |team| %>
+            <tr>
+              <td><%= team.number %></td>
+              <td><%= team.name %></td>
+              <td><%= team.group %></td>
+              <td><%= team.nominal_start_time %></td>
+              <td><%= team.score %></td>
+              <td><%= link_to "Manage", edit_team_path(team) %></td>
+            </tr>
+          <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-3 vspace">
+    <%= link_to raw("<span class=\"glyphicon glyphicon-plus\"></span> New Team"), new_team_path, :class=>'btn btn-block btn-success' %>
+  </div>
+  <div class="col-md-3 vspace">
+    <%= link_to raw("<span class=\"glyphicon glyphicon-circle-arrow-down\"></span> Download as PDF"), teams_path(format: :pdf), :class=>'btn btn-block btn-default' %>
+  </div>
+</div>
