--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,5 +1,36 @@
-<h1>New Team</h1>
+<% provide(:title, "New Team") %>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <p>The team's number will be calculated automatically from its start time.</p>
+  </div>
+</div>
 
-<%= link_to 'Back', teams_path %>
+<%= form_for(@team) do |f| %>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <%= render 'shared/error_messages', object: f.object %>
+
+      <%= f.label :name, "Team Name" %>
+      <%= f.text_field :name, class: 'form-control' %>
+
+      <%= f.label :challenge_id, "Section" %>
+      <%= f.text_field :challenge_id, class: 'form-control' %>
+
+      <%= f.label :group, "Group" %>
+      <%= f.text_field :group, class: 'form-control' %>
+
+      <%= f.label :nominal_start_time, "Start Time" %>
+      <%= f.text_field :nominal_start_time, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-3 vspace">
+      <%= f.submit :class=>'btn btn-primary' %>
+    </div>
+    <div class="col-md-3 vspace">
+      <%= link_to "Cancel", teams_path, :class=>'btn btn-block btn-default' %>
+    </div>
+  </div>
+<% end %>
+
