Basic views for challenges

--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -14,7 +14,7 @@
       <%= f.label :name, "Team Name" %>
       <%= f.text_field :name, class: 'form-control' %>
 
-      <%= f.label :challenge_id, "Section" %>
+      <%= f.label :challenge_id, "Challenge" %>
       <%= f.text_field :challenge_id, class: 'form-control' %>
 
       <%= f.label :group, "Group" %>
