--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,8 +38,8 @@
             <td><%= num + 1 %></td>
             <td><%= team.name %></td>
             <td><%= team.group.to_s.titleize %></td>
-            <td><%= team.nominal_start_time %></td>
-            <td><!-- Finish time --></td>
+            <td><%= start_time(team) %></td>
+            <td><%= finish_time(team) %></td>
           </tr>
         <% end %>
       </tbody>
