--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,6 +20,7 @@
   </div>
 </div>
 
+<% count = 1 %>
 <% @challenges.order(:time_allowed).reverse_order.each do |challenge| %>
 <div class="row vspace">
   <div class="col-md-12">
@@ -39,14 +40,15 @@
         </tr>
       </thead>
       <tbody>
-        <% challenge.teams.order(:nominal_start_time).each_with_index do |team, num| %>
+        <% challenge.teams.order(:nominal_start_time).each do |team| %>
           <tr>
-            <td><%= num + 1 %></td>
+            <td><%= count %></td>
             <td><%= team.name %></td>
             <td><%= team.group.to_s.titleize %></td>
             <td><%= start_time(team) %></td>
             <td><%= finish_time(team) %></td>
           </tr>
+          <% count += 1 %>
         <% end %>
       </tbody>
     </table>
