--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -8,7 +8,7 @@
 
 <% count = 1 %>
 <% @challenges.order(:time_allowed).each do |challenge| %>
-<div class="row vspace">
+<div class="row">
   <div class="col-md-12">
     <h3><%= challenge.time_allowed %> Hour Challenge</h3>
   </div>
@@ -41,6 +41,8 @@
   </div>
 </div>
 <% end %>
+
+<br />
 
 <div class="row">
   <div class="col-md-3 vspace">
